--- a/Develop/style.css
+++ b/Develop/style.css
@@ -69,3 +69,28 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+.card-header-title-input {
+  font-size: inherit;
+  font-weight: inherit;
+  width: 50%;
+  display: block;
+}
+
+.card-header-title--editable {
+  outline: none;
+}
+.things {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  width: 90%;
+  color: white;
+  margin-left: 15px;
+
+}
+.oi {
+ position: absolute;
+ right: 20px;
+ height: auto;
+ top: 15px;
+}
